test_fixtures/while/class_in_body.lox
// ParserError: UnexpectedExpressionToken found Class from l2c14 to l2c19
while (true) class Foo {}
